--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ span[role='img'] {
 }
 
 form {
-  width: 40%;
+  width: 100%;
 }
 
 input {
@@ -155,7 +155,7 @@ nav li {
 }
 
 textarea {
-  width: 600px;
+  width: 100%;
   height: 120px;
   border: 3px solid #cccccc;
   padding: 5px;
@@ -339,7 +339,7 @@ a {
 }
 
 .work .right {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -352,6 +352,7 @@ a {
 
 .work .right a {
   border: thick solid var(--primary-color);
+  width: 100%;
 }
 
 .work .right .main {
@@ -359,29 +360,25 @@ a {
   flex-direction: row;
   width: 100%;
   height: 20vw;
-  background-image: url('./assets/Images/Adventure-Screenshot-Dark.png');
   background-size: cover;
   background-position: left top;
   align-items: flex-end;
   margin-top: 10px;
 }
 
-.work .right .main:hover {
-  background-image: url('./assets/Images/Adventure-Screenshot.png');
+.Social {
+  background-image: url('./assets/Images/socialmediaAPIDark.png');
 }
 
-.work .right .main {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 20vw;
+.Social:hover {
+  background-image: url('./assets/Images/socialmediaAPI.png');
+}
+
+.Adventure {
   background-image: url('./assets/Images/Adventure-Screenshot-Dark.png');
-  background-size: cover;
-  background-position: left top;
-  align-items: flex-end;
 }
 
-.work .right .main:hover {
+.Adventure:hover {
   background-image: url('./assets/Images/Adventure-Screenshot.png');
 }
 
@@ -440,7 +437,7 @@ a {
   flex-direction: column;
   background-color: rgba(255, 0, 0, 1);
   height: 70px;
-  width: auto;
+  width: 100%;
   margin-bottom: 10px;
   padding-right: 10px;
   padding-left: 10px;
