--- a/src/index.css
+++ b/src/index.css
@@ -77,16 +77,13 @@ h6 {
 p {
   font-size: 1.1rem;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 a {
   color: var(--tertiary);
   text-decoration: none;
   font-weight: bold;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 header {
@@ -171,6 +168,7 @@ textarea {
 .flex-row {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .space-between {
@@ -301,7 +299,7 @@ a {
   padding-left: 10px;
   font-weight: bold;
   margin: 0;
-  font-size: calc(2.5vw);
+  font-size: 25px;
 }
 
 .leftHeader {
@@ -314,10 +312,16 @@ a {
   display: flex;
   text-align: center;
   align-items: center;
+  font-size: 20px;
 }
 
 .onHover:hover{
   color: var(--fourth-color);
+}
+.navBackground{
+  background-image: url('./assets/Images/153rd\ c130.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* Work Styles Start */
@@ -351,7 +355,6 @@ a {
 }
 
 .work .right a {
-  border: thick solid var(--primary-color);
   width: 100%;
 }
 
@@ -359,11 +362,13 @@ a {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 20vw;
+  height: 30vw;
+  min-height: 300px;
   background-size: cover;
   background-position: left top;
   align-items: flex-end;
   margin-top: 10px;
+  overflow-wrap:break-word;
 }
 
 .Social {
@@ -444,7 +449,7 @@ a {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 0, 0, 1);
-  height: 70px;
+  height: 140px;
   width: 100%;
   margin-bottom: 10px;
   padding-right: 10px;
@@ -453,14 +458,14 @@ a {
 }
 
 .work .right h4 {
-  font-size: 1.55vw;
-  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
   color: var(--tertiary-color);
 }
 
 .work p {
   color: var(--tertiary-color);
-  font-size: 1.25vw;
+  font-size: 18px;
 }
 /* Work Styles End */
 
@@ -477,6 +482,8 @@ a {
 .resumePara{
   justify-content:center;
   width: 100%;
-  
-  
+}
+
+.work .right div a:hover {
+  text-decoration: underline;
 }
